# Gtest_Fun

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
inc/: first.hpp
src/: first.cpp
test/: CMakeLists.txt  first_test.cpp
test/mocks_inc/: first_m.hpp
